# metaTsetlin

./: .gitignore  CMakeLists.txt  README.md
data/siRNA/: Huesken.csv
data/siRNA/e2s/: e2s_test_efficiency.csv  e2s_test_seq.csv  e2s_training_efficiency.csv  e2s_training_seq.csv  test.csv  train.csv
data/siRNA/e2sall/: e2sIncResponse.csv  e2sIncSeqs.csv
debug/: clauseDebug.cpp
demo/: aoaDemo.cpp  aoaSiRNA.cpp  aoatest.cpp  dataParser.cpp  metaTsetlinDemo.cpp  psoDemo.cpp  psotest.cpp  rsaDemo.cpp  rsaSiRNA.cpp  test.cpp  xor.cpp  xorDemo.cpp
src/metaHeuristic/: CMakeLists.txt
src/metaHeuristic/aoa/: AOAoptimizer.h  CMakeLists.txt  Optimizer.h
src/metaHeuristic/pso/: CMakeLists.txt  PSOoptimizer.h  Particle.h
src/metaHeuristic/rsa/: CMakeLists.txt  Habitat.h  Predator.h  RSAoptimizer.h
src/nucleotides/: CMakeLists.txt  nucleotides.cpp  nucleotides.h
src/pcg/: CMakeLists.txt  dummy.cpp
src/threadPool/: CMakeLists.txt
src/tsetlin/: Automata.cpp  Automata.h  CMakeLists.txt  Clause.cpp  Clause.h  TsetlinMachine.cpp  TsetlinMachine.h  io.cpp  io.h
